[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "scikit-learn>=0.23.0"
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''